@@ -1,3 +1,7 @@
+2007-04-14  Jan Arne Petersen  <jap@gnome.org>
+
+	* logrtns.c: (log_read_dates): Add check for i < n-1. (#364106)
+
 2007-01-22  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* log_repaint.c: Fix message. (#399544, Stephane Raimbault)
